--- a/API_Portfolio/API_Portfolio/Dockerfile
+++ b/API_Portfolio/API_Portfolio/Dockerfile
@@ -7,10 +7,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["API_Portfolio.csproj", "."]
-RUN dotnet restore "./API_Portfolio.csproj"
+COPY ["API_Portfolio/API_Portfolio.csproj", "API_Portfolio/"]
+RUN dotnet restore "API_Portfolio//API_Portfolio.csproj"
 COPY . .
-WORKDIR "/src/."
+WORKDIR "/src/API_Portfolio"
 RUN dotnet build "API_Portfolio.csproj" -c Release -o /app/build
 
 FROM build AS publish
@@ -19,4 +19,4 @@ RUN dotnet publish "API_Portfolio.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-CMD ASPNETCORE_URLS=http://*:$PORT dotnet dotnet-heroku.dll
+ENTRYPOINT ["dotnet", "API_Portfolio.dll"]
